[gd_scene load_steps=3 format=3 uid="uid://dno8fadlwnbcg"]

[ext_resource type="Script" path="res://prog-82a.gd" id="1_kafbw"]

[sub_resource type="LabelSettings" id="LabelSettings_eq663"]
font_size = 20

[node name="prog-82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kafbw")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -2.0
offset_right = 256.0
offset_bottom = 87.0
text = "enter the speed limit:"
label_settings = SubResource("LabelSettings_eq663")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 107.0
offset_right = 260.0
offset_bottom = 194.0
text = "enter the vehicle speed:"
label_settings = SubResource("LabelSettings_eq663")

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 208.0
offset_right = 669.0
offset_bottom = 295.0
label_settings = SubResource("LabelSettings_eq663")
vertical_alignment = 1

[node name="txtlimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = -3.0
offset_right = 567.0
offset_bottom = 61.0

[node name="txtspeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 102.0
offset_right = 563.0
offset_bottom = 166.0

[node name="btncal" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 326.0
offset_right = 181.0
offset_bottom = 392.0
text = "calculate"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 212.0
offset_top = 327.0
offset_right = 365.0
offset_bottom = 393.0
text = "clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 326.0
offset_right = 569.0
offset_bottom = 392.0
text = "exit"

[connection signal="pressed" from="btncal" to="." method="_on_btncal_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
